kubernetes/applications/ghost/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ghost
  namespace: apps
spec:
  selector:
    matchLabels:
      app: "ghost"
  serviceName: "ghost"
  replicas: 1
  template:
    metadata:
      labels:
        app: ghost
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: ghost
          # image: ghost:5.98.1-alpine
          image: ghost:5.129.2 # Use alpine when done messing around
          resources:
            requests:
              memory: 256Mi
              cpu: 500m
              ephemeral-storage: 8Gi
            limits:
              memory: 256Mi
              cpu: 500m
              ephemeral-storage: 8Gi
          ports:
            - containerPort: 2368
              name: web
          volumeMounts:
            - name: ghost-data
              mountPath: /var/lib/ghost/content
  volumeClaimTemplates:
    - metadata:
        name: ghost-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 8Gi
