kubernetes/applications/ghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-svc
  namespace: homelab
  labels:
    app: ghost
spec:
  ports:
    - port: 2368
      name: web
  selector:
    app: ghost
