kubernetes/applications/ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: homelab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/server-snippet: |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &ghostHost blog.mcmumf.dev
      secretName: ghost-cert
  rules:
    - host: *ghostHost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost-svc
                port:
                  number: 2368
